--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
 
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0"></PackageReference>
